--- a/package.json
+++ b/package.json
@@ -19,14 +19,24 @@
   "homepage": "https://github.com/Nikhil718/Namaste-React#readme",
   "devDependencies": {
     "@babel/core": "^7.20.7",
+    "assert": "^2.0.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "buffer": "^5.7.1",
+    "os-browserify": "^0.3.0",
     "parcel": "^2.8.2",
+    "path-browserify": "^1.0.1",
     "postcss": "^8.4.21",
     "process": "^0.11.10",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "util": "^0.12.5"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.2",
+    "babel-plugin-macros": "^3.1.0",
+    "firebase": "^9.17.1",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
