--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2",
+    "react-type-animation": "^2.1.2",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "browserslist": [
