--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "jest",
     "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html",
+    "watch-test": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -18,10 +19,17 @@
   },
   "homepage": "https://github.com/Nikhil718/Namaste-React#readme",
   "devDependencies": {
-    "@babel/core": "^7.20.7",
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "assert": "^2.0.0",
+    "babel-jest": "^29.4.3",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "buffer": "^5.7.1",
+    "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
     "os-browserify": "^0.3.0",
     "parcel": "^2.8.2",
     "path-browserify": "^1.0.1",
